@@ -383,6 +383,12 @@ class AdminHandler(WebHandler):
     def spotlight(self, *args, **kwargs):
         return self._write('admin/spotlight',
                            spotlightData=self.client.getSpotlightAll())
+        
+    def cloudConfig(self, auth):
+        userCredentials = self.client.getEC2CredentialsForUser(self.auth.userId)
+        template = userCredentials.get('awsAccountNumber', None) and \
+                'cloudConfig' or 'cloudCatalogNoCredentials'
+        return self._write('admin/' + template)
 
     def _makeMirrorOrderingLinks(self, name, count, order, index, id):
         """Helper function to make the up/down links for mirror ordering"""
